openmediavault (0.2.5.5) stable; urgency=low

  * Improve monitoring feature.
  * Mantis 0000269: hdparm - change config from "/dev/xxx" to "/dev/disk/by-id".
    The same applies to smartd.conf.
  * Mantis 0000272: Allow handleResponse in OMVDownloadRpcServer to accept
    a content-type
  * Mantis 0000275: RPC call to System::noop sometimes throws exception
  * Mantis 0000276: Configure monit load average based on detected CPU's

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 18 Nov 2011 21:27:13 +0100

openmediavault (0.2.5.4) stable; urgency=low

  * Add ability to enable/disable Cron/RSync jobs.
  * Disable purging man pages in Dpkg Post-Invoke by default. This can be
    enabled via environment variable OMV_DPKG_POSTINVOKE_PURGE_MAN.
  * Mantis 0000263: Configuration backup file naming scheme
  * Mantis 0000266: Unable to login after changing admin password
  * Mantis 0000267: Set system overview as default start page

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 13 Nov 2011 03:05:47 +0100

openmediavault (0.2.5.3) stable; urgency=low

  * Add ability to add hot spares to a RAID device via WebGUI.
  * Modify regular expression to validate usernames.
  * Change Avahi (Zeroconf) listening port for SMB service from 139 to 445.
  * Improve implementation of log file handling. Output the last 100000 lines.
    Limitation can be modified via OMV_MAX_LOGFILE_LINES environment variable.
  * Mantis 0000005: PHP crashes when sorting bigger syslog files
  * Mantis 0000084: Unable to replace faulted drive in RAID5 array via GUI
  * Mantis 0000249: FTP MasqueradeAddress does not accept FQDN
  * Mantis 0000260: Using simple quote on comment give error
  * Mantis 0000261: Display physical memory usage based on unbuffered/uncached
    used/free values.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 10 Nov 2011 19:36:05 +0100

openmediavault (0.2.5.2) stable; urgency=low

  * Display use of shared folder